--- a/wedding.html
+++ b/wedding.html
@@ -12,37 +12,37 @@
         rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://www.launchaco.com/static/AllTemplates.min.css" rel="stylesheet">
-
 </head>
 
 <body class="font-friendly">
-    <div class="coral-flat"
-        style="background-color: #fff; color:black">
+    <div class="coral-flat" style="background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;">
         <section class="section">
             <div class="container mb40">
                 <div class="col-12 text-center">
                     <div>
 
-                    <h1 class="heading-lrg  launchaco-builder-hoverable">Welcome to Courtney and Robert James'
-                        Wedding</h1>
-                    <h2 class="subheading  mt20 launchaco-builder-hoverable">Come party with us!
-                    </h2>
-                    <h2 class="subheading mt20 launchaco-builder-hoverable">
+                        <h1 class="heading-lrg  launchaco-builder-hoverable" style="color:white">Welcome to Courtney and Robert James'
+                            Wedding</h1>
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable" style="color:white">Come party with us!
+                        </h2>
+                        <h2 class="subheading mt20 launchaco-builder-hoverable" style="color:white">
                             We are excited to invite you to join us as we begin building our new future together.
                         </h2>
-                        <h2 class="subheading  mt20 launchaco-builder-hoverable">
-                            Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable" style="color:white">
+                            Each one of you plays a unique role in our lives, sharing with us memories we will always
+                            treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we
+                            exchange vows and make a lasting commitment to one another.
                         </h2>
-                            <h2 class="subheading  mt20 launchaco-builder-hoverable"> 
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable">
                             Kindly fill out the RSVP below by December 31st.</h2>
-                    <h2 id="demo" class="subheading  mt20 launchaco-builder-hoverable"></h2>
-                    <div class="mt40">
-                        <a class="button mobile-text-center mt10 launchaco-builder-hoverable"
-                            href="https://www.youtube.com/watch?v=Eqf8oV-6CVw&feature=youtu.be"
-                            target="_blank"><span>Engagement video</span></a>
+                        <h2 id="demo" class="subheading  mt20 launchaco-builder-hoverable" style="color:white"></h2>
+                        <div class="mt40">
+                            <a class="button mobile-text-center mt10 launchaco-builder-hoverable"
+                                href="https://www.youtube.com/watch?v=Eqf8oV-6CVw&feature=youtu.be"
+                                target="_blank"><span>Engagement video</span></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
         </section>
     </div>
@@ -82,20 +82,23 @@
         </div>
     </section>
 
-        <img alt="Screenshot of application" class="custom-img"
-                            src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
-                    </div>
+    <img alt="Screenshot of application" class="custom-img"
+        src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
+    </div>
 
     <section class="section coral-white" id="team-2">
         <div class="container text-center mb35">
             <h3 class="heading primary-color launchaco-builder-hoverable">Our Story</h3>
-            <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and Courtney met while both being guests at the same co-living hub on Airbnb. The intrepid travelers hit it off while attending an art show that also served pancakes with some of the other residents at their shared Airbnb and the rest was history.</p>
+            <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and
+                Courtney met while both being guests at the same co-living hub on Airbnb. The intrepid travelers hit it
+                off while attending an art show that also served pancakes with some of the other residents at their
+                shared Airbnb and the rest was history.</p>
         </div>
         <div class="container flex wrap text-center">
             <div class="col-6 mt40 flex launchaco-builder-hoverable">
                 <div class="team-card flex flex-column center-vertical center-horizontal w100">
-                   
-                    
+
+
                     <div class="user-image mb20"
                         style="background-image: url('https://cdn.launchaco.com/images/2f268123-7ba1-48ab-bf84-979d684908b4.png');">
                     </div>
@@ -119,9 +122,11 @@
                     <div>
                         <b class="bold primary-color">Courtney Hood</b>
                         <p class="paragraph primary-color mt10">Bride</p>
-                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite book is Ella Enchanted and thinks Disney needs to hire her to remake
+                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite
+                            book is Ella Enchanted and thinks Disney needs to hire her to remake
                             that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making
-                            a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much of
+                            a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much
+                            of
                             this wild world as possible and is extremely happy to have found, not only a travel
                             partner, but a life partner along the way.</p>
                     </div>
@@ -190,7 +195,12 @@
                 </div>
                 <div class="faq pad20">
                     <b class="bold primary-color launchaco-builder-hoverable">Do you have a wedding registry<b>
-                            <p class="paragraph secondary-color launchaco-builder-hoverable">We are so happy that you’ll be able to join us for our wedding. As many of you know, we travel and work remotely full time and just don’t have any need for gifts or a place to even put them. While the presence of your company is the only gift we could ever ask for, an alternative registry has been set up here for those who have expressed an interest in offering a gift to mark the occasion.</p>
+                            <p class="paragraph secondary-color launchaco-builder-hoverable">We are so happy that you’ll
+                                be able to join us for our wedding. As many of you know, we travel and work remotely
+                                full time and just don’t have any need for gifts or a place to even put them. While the
+                                presence of your company is the only gift we could ever ask for, an alternative registry
+                                has been set up here for those who have expressed an interest in offering a gift to mark
+                                the occasion.</p>
                 </div>
 
 
@@ -214,7 +224,7 @@
             </div>
         </div>
     </section>
-    <footer class="section text-center coral-accent" id="footer-6">
+    <footer class="section text-center" style="background-color:black" id="footer-6">
         <div class="container col-12">
             <nav class="mb50">
                 <a class="nav-link secondary-color" href="https://www.robertgabriel.ninja" target="_blank">Robert James'
