--- a/wedding.html
+++ b/wedding.html
@@ -224,7 +224,7 @@
             </div>
         </div>
     </section>
-    <footer class="section text-center" style="background-color:black" id="footer-6">
+    <footer class="section text-center" style="background-color:black; color: white" id="footer-6">
         <div class="container col-12">
             <nav class="mb50">
                 <a class="nav-link secondary-color" href="https://www.robertgabriel.ninja" target="_blank">Robert James'
