--- a/wedding.html
+++ b/wedding.html
@@ -15,27 +15,30 @@
 </head>
 
 <body class="font-friendly">
-    <div class="coral-flat" style="background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;">
-        <section class="section">
+    <div class="coral-flat">
+        <section class="section" style="
+        background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
+        background-size: 100% 2px;
+    ">
             <div class="container mb40">
                 <div class="col-12 text-center">
                     <div>
 
-                        <h1 class="heading-lrg  launchaco-builder-hoverable" style="color:white">Welcome to Courtney and Robert James'
+                        <h1 class="heading-lrg  launchaco-builder-hoverable">Welcome to Courtney and Robert James'
                             Wedding</h1>
-                        <h2 class="subheading  mt20 launchaco-builder-hoverable" style="color:white">Come party with us!
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable">Come party with us!
                         </h2>
-                        <h2 class="subheading mt20 launchaco-builder-hoverable" style="color:white">
+                        <h2 class="subheading mt20 launchaco-builder-hoverable">
                             We are excited to invite you to join us as we begin building our new future together.
                         </h2>
-                        <h2 class="subheading  mt20 launchaco-builder-hoverable" style="color:white">
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable">
                             Each one of you plays a unique role in our lives, sharing with us memories we will always
                             treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we
                             exchange vows and make a lasting commitment to one another.
                         </h2>
                         <h2 class="subheading  mt20 launchaco-builder-hoverable">
                             Kindly fill out the RSVP below by December 31st.</h2>
-                        <h2 id="demo" class="subheading  mt20 launchaco-builder-hoverable" style="color:white"></h2>
+                        <h2 id="demo" class="subheading  mt20 launchaco-builder-hoverable"></h2>
                         <div class="mt40">
                             <a class="button mobile-text-center mt10 launchaco-builder-hoverable"
                                 href="https://www.youtube.com/watch?v=Eqf8oV-6CVw&feature=youtu.be"
@@ -46,7 +49,10 @@
 
         </section>
     </div>
-    <section class="section coral-white" id="cta-1">
+    <section class="section coral-white" id="cta-1" style="
+    background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
+    background-size: 100% 2px;
+">
 
         <div class="container text-center">
 
@@ -86,7 +92,10 @@
         src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
     </div>
 
-    <section class="section coral-white" id="team-2">
+    <section class="section coral-white" id="team-2" style="
+    background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
+    background-size: 100% 2px;
+">
         <div class="container text-center mb35">
             <h3 class="heading primary-color launchaco-builder-hoverable">Our Story</h3>
             <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and
@@ -136,7 +145,10 @@
         </div>
     </section>
 
-    <section class="section coral-white" id="faq-4">
+    <section class="section coral-white" id="faq-4" style="
+    background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
+    background-size: 100% 2px;
+">
         <div class="container">
             <div class="col-12 text-center">
                 <h3 class="heading primary-color launchaco-builder-hoverable">Frequently Asked Questions</h3>
@@ -207,7 +219,10 @@
             </div>
         </div>
     </section>
-    <section class="section coral-white" id="cta-5">
+    <section class="section coral-white" id="cta-5" style="
+    background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
+    background-size: 100% 2px;
+">
 
         <div class="container text-center">
             <div class="col-12">
