--- a/wedding.html
+++ b/wedding.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="font-friendly">
-    <div class="coral-flat">
+    <div >
         <section class="section" style="
         background: linear-gradient(to right, #bcbcbc 25%,#ffcd02 25%, #ffcd02 50%, #e84f47 50%, #e84f47 75%, #65c1ac 75%) left bottom no-repeat;
         background-size: 100% 2px;
