--- a/wedding.html
+++ b/wedding.html
@@ -12,6 +12,9 @@
         rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://www.launchaco.com/static/AllTemplates.min.css" rel="stylesheet">
+    <style>a{
+        color: blue;
+        }</style>
 </head>
 
   <body class="font-friendly">
@@ -145,20 +148,20 @@
           <div class="faq pad20"><input id="faq-dropdown-3-2" type="checkbox" name="faq" class="faq-input"> <label for="faq-dropdown-3-2" class="faq-label flex spread center-horizontal"><span class="bold primary-color mr20">What to see</span> <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
                 <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
               </svg></label>
-            <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-  <p class="paragraph secondary-color launchaco-builder-hoverable">
+           
+  <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
                         <a href="http://www.muskerryarms.com/" target="_blank">Muskery Arms</a>
                     </p>
-                    <p class="paragraph secondary-color launchaco-builder-hoverable">
+                    <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
                         <a href="https://www.blarneycastle.ie/" target="_blank">Blarney Castle</a>
                     </p>
-                    <p class="paragraph secondary-color launchaco-builder-hoverable">
+                    <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
                         <a href="https://www.jamesonwhiskey.com/en-US/visit-us/jameson-distillery-midleton"
                             target="_blank">Jameson Distillery</a>
                     </p>
-                    <p class="paragraph secondary-color launchaco-builder-hoverable">
+                    <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
                         <a href="http://www.englishmarket.ie" target="_blank">English Market</a></p>
-            </p>
+
           </div>
           <div class="faq pad20"><input id="faq-dropdown-3-3" type="checkbox" name="faq" class="faq-input"> <label for="faq-dropdown-3-3" class="faq-label flex spread center-horizontal"><span class="bold primary-color mr20">Do you have a wedding registry</span> <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
                 <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
