--- a/wedding.html
+++ b/wedding.html
@@ -14,7 +14,13 @@
     <link href="https://www.launchaco.com/static/AllTemplates.min.css" rel="stylesheet">
     <style>a{
         color: blue;
-        }</style>
+        }
+    
+        a:hover{
+        color: red;
+        }
+    
+    </style>
 </head>
 
   <body class="font-friendly">
