--- a/wedding.html
+++ b/wedding.html
@@ -176,7 +176,7 @@
                 <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
               </svg></label>
             <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-              We are so happy that you’ll be able to join us for our wedding. As many of you know, we travel and work remotely full time and just don’t have any need for gifts or a place to even put them. While the presence of your company is the only gift we could ever ask for, an alternative registry has been set up here for those who have expressed an interest in offering a gift to mark the occasion.
+              We are so happy that you’ll be able to join us for our wedding. As many of you know, we travel and work remotely full time and just don’t have any need for gifts or a place to even put them. While the presence of your company is the only gift we could ever ask for, an alternative <a href="https://www.blueprintregistry.com/registry/LeapingIntoLove" target="_blank">registry</a> has been set up here for those who have expressed an interest in offering a gift to mark the occasion.
             </p>
           </div>
         </div>
