--- a/wedding.html
+++ b/wedding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>#LeapingIntoLove | Courtney & Robert</title>
+    <title>👰🤵#LeapingIntoLove | Courtney & Robert</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <meta content="LeapingIntoLove with Courtney & Robert James" name="description">
@@ -64,7 +64,7 @@
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
             <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/dd1ac790-12e3-4be9-a55b-b1ed8e02750a.png&quot;);"></div>
             <div><b class="bold primary-color">Courtney Hood</b>
-              <p class="paragraph primary-color mt10">Bride</p>
+              <p class="paragraph primary-color mt10">Bride  👰</p>
               <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite book is Ella Enchanted and thinks Disney needs to hire her to remake that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much of this wild world as possible and is extremely happy to have found, not only a travel partner, but a life partner along the way.</p>
             </div>
             <!---->
@@ -74,7 +74,7 @@
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
             <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/937c2841-2da7-4e2c-abfe-e977d397c368.png&quot;);"></div>
             <div><b class="bold primary-color">Robert James Gabriel</b>
-              <p class="paragraph primary-color mt10">Groom</p>
+              <p class="paragraph primary-color mt10">Groom🤵</p>
               <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. Robert James works as a software engineer while traveling the world with the amazing Courtney. Born and raised in Ireland, Robert is passionate and strives to make the world wide web friendlier for all! Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg off with his Irish gift-of-the-gab if you give him half a chance.</p>
             </div>
             <!---->
