--- a/wedding.html
+++ b/wedding.html
@@ -40,10 +40,12 @@
         <div class="container-lrg flex">
           <div class="flex flex-column col-6">
             <h1 class="heading primary-color launchaco-builder-hoverable">Welcome to Courtney and Robert James' Wedding 👋</h1>
-            <h2 class="paragraph secondary-color mt20 launchaco-builder-hoverable">Come party with us!
+            <h2 class="paragraph secondary-color mt20 launchaco-builder-hoverable">Come party with us!<br>
               We are excited to invite you to join us as we begin building our new future together.
+                <br>
               Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
-              Kindly fill out the RSVP below by December 31st.</h2>
+                <br>
+                Kindly fill out the <a href="#rsvp">RSVP</a> below by December 31st.</h2>
             <div class="mt40"><a href="https://www.youtube.com/watch?v=If8o_r4u5gw" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"><span> Engagement video </span></a><a href="#rsvp" class="button mobile-text-center mt10 launchaco-builder-hoverable"> <span> RSVP </span></a></div>
           </div>
           <div class="col-6 flex center-horizontal center-vertical">
@@ -97,7 +99,7 @@
               Location
             </b>
             <p class="paragraph secondary-color launchaco-builder-hoverable">
-              St Peters, N Main St, Centre, Cork, Ireland
+              <a href="https://www.google.com/maps/place/St.+Peter's+Cork/@51.899614,-8.480933,17z/data=!3m1!4b1!4m5!3m4!1s0x48449016d0d2eef5:0x92084379af32847!8m2!3d51.899614!4d-8.478739" target="_blank">St Peters, N Main St, Centre, Cork, Ireland</a>
             </p>
           </div>
           <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
@@ -111,7 +113,7 @@
               Time
             </b>
             <p class="paragraph secondary-color launchaco-builder-hoverable">
-              3pm til late 🎉
+              2pm (ish) til late 🎉
             </p>
           </div>
         </div>
