--- a/wedding.html
+++ b/wedding.html
@@ -136,13 +136,13 @@
                 <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
               </svg></label>
             <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-              There’s Cork City airport (ORK) which is a convenient 15 min drive to Cork city center. It also has the best airport art installation you’ll ever see, Redhead Exhibition showcasing various portraits of people with ginger hair.
-
+              There’s <a href="https://www.corkairport.com/" target="_blank">Cork City airport (ORK)</a> which is a convenient 15 min drive to <a href="https://www.cork-guide.ie/corkcity.htm" target="_blank">Cork city center</a>. It also has the best airport art installation you’ll ever see, Redhead Exhibition showcasing various portraits of people with ginger hair.
+                <br>
               Irish Airport
-
+                <br>
               Flights to this airport tend to be a bit pricier than flights to….
-
-              Dublin Airport (DUB) usually has cheaper flights and would be a good option for those extending their trip to see more of Ireland. Dublin is a 3-hour drive or very inexpensive and easy 3-hour bus trip using GoBus.ie. Think of it as seeing the scenery as you arrive.
+ <br>
+                <a href="https://www.dublinairport.com/" target="_blank">Dublin Airport (DUB)</a> usually has cheaper flights and would be a good option for those extending their trip to see more of Ireland. Dublin is a 3-hour drive or very inexpensive and easy 3-hour bus trip using GoBus.ie. Think of it as seeing the scenery as you arrive.
             </p>
           </div>
           <div class="faq pad20"><input id="faq-dropdown-3-1" type="checkbox" name="faq" class="faq-input"> <label for="faq-dropdown-3-1" class="faq-label flex spread center-horizontal"><span class="bold primary-color mr20">Where To Stay</span> <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
@@ -150,9 +150,9 @@
               </svg></label>
             <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
               We have blocked off rooms at The Muskerry Arms, Robert’s families pub in the quaint village of Blarney, Ireland.
-
+    <br>
               We also have rooms blocked off at Blank Hotel in Cork, very near our wedding venue.
-
+    <br>
               Rob and I couldn’t be bigger fans of Airbnb so if you decide to book your stay using Airbnb consider using our link here. You get $20 off your stay, we get $20. Everyone wins. Okay, sales pitch over.
             </p>
           </div>
