--- a/wedding.html
+++ b/wedding.html
@@ -46,7 +46,7 @@
               Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
                 <br> <br>
                 Kindly fill out the <a href="#rsvp">RSVP</a> below by December 31st.</h2>
-            <div class="mt40"><a href="https://www.youtube.com/watch?v=If8o_r4u5gw" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"><span> Engagement video </span></a><a href="#rsvp" class="button mobile-text-center mt10 launchaco-builder-hoverable"> <span> RSVP </span></a></div>
+            <div class="mt40"><a href="https://www.youtube.com/watch?v=If8o_r4u5gw" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"><span> Engagement video </span></a><a href="#rsvp" class="button mobile-text-center mt10 launchaco-builder-hoverable button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"> <span> RSVP </span></a></div>
           </div>
           <div class="col-6 flex center-horizontal center-vertical">
             <div class="launchaco-builder-hoverable">
@@ -153,7 +153,7 @@
     <br>
               We also have rooms blocked off at Blank Hotel in Cork, very near our wedding venue.
     <br>
-              Rob and I couldn’t be bigger fans of Airbnb so if you decide to book your stay using Airbnb consider using our link here. You get $20 off your stay, we get $20. Everyone wins. Okay, sales pitch over.
+              Rob and I couldn’t be bigger fans of <a href="https://www.airbnb.ca/c/robertg982?currency=CAD">Airbnb</a> so if you decide to book your stay using <a href="https://www.airbnb.ca/c/robertg982?currency=CAD">Airbnb</a> consider using our link here. You get $20 off your stay, we get $20. Everyone wins. Okay, sales pitch over.
             </p>
           </div>
           <div class="faq pad20"><input id="faq-dropdown-3-2" type="checkbox" name="faq" class="faq-input"> <label for="faq-dropdown-3-2" class="faq-label flex spread center-horizontal"><span class="bold primary-color mr20">What to see</span> <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
