--- a/wedding.html
+++ b/wedding.html
@@ -46,7 +46,7 @@
               Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
                 <br> <br>
                 Kindly fill out the <a href="#rsvp">RSVP</a> below by December 31st.</h2>
-            <div class="mt40"><a href="https://www.youtube.com/watch?v=If8o_r4u5gw" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"><span> Engagement video </span></a><a href="#rsvp" class="button mobile-text-center mt10 launchaco-builder-hoverable button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"> <span> RSVP </span></a></div>
+            <div class="mt40"><a href="https://www.youtube.com/watch?v=If8o_r4u5gw" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center fill-white primary-color"><span> Engagement video </span></a><a href="#rsvp" class="button mobile-text-center mt10 launchaco-builder-hoverable button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg fill-white primary-color"> <span> RSVP </span></a></div>
           </div>
           <div class="col-6 flex center-horizontal center-vertical">
             <div class="launchaco-builder-hoverable">
