--- a/wedding.html
+++ b/wedding.html
@@ -116,6 +116,13 @@
               2pm (ish) til late 🎉
             </p>
           </div>
+          <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
+              How many days until the wedding?
+            </b>
+            <p class="paragraph secondary-color launchaco-builder-hoverable" id="demo">
+            </p>
+          </div>            
+            
         </div>
       </div>
     </section>
