--- a/wedding.html
+++ b/wedding.html
@@ -138,8 +138,12 @@
                         Location
                     </b>
                     <p class="paragraph secondary-color launchaco-builder-hoverable">
-                        <a href="https://www.google.com/maps/place/St.+Peter's+Cork/@51.899614,-8.480933,17z/data=!3m1!4b1!4m5!3m4!1s0x48449016d0d2eef5:0x92084379af32847!8m2!3d51.899614!4d-8.478739"
+                     Ceremony:    <a href="https://www.google.com/maps/place/St.+Peter's+Cork/@51.899614,-8.480933,17z/data=!3m1!4b1!4m5!3m4!1s0x48449016d0d2eef5:0x92084379af32847!8m2!3d51.899614!4d-8.478739"
                             target="_blank">St Peters, N Main St, Centre, Cork, Ireland</a>
+                    </p>
+                    <p class="paragraph secondary-color launchaco-builder-hoverable">
+                     Reception:    <a href="https://www.google.com/maps/place/Deep+South+Cork/@51.8963059,-8.4772355,17z/data=!3m1!4b1!4m5!3m4!1s0x4844901a73b5c595:0xa2080b5c9c9e1bab!8m2!3d51.8963026!4d-8.4750415"
+                            target="_blank">Deep Sourth, 51 Grand Parade, Centre, Cork, Ireland</a>
                     </p>
                 </div>
                 <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
@@ -221,8 +225,8 @@
                         We also have rooms blocked off at Blank Hotel in Cork, very near our wedding venue.
                         <br>
                         Rob and I couldn’t be bigger fans of <a
-                            href="https://www.airbnb.ca/c/robertg982?currency=CAD">Airbnb</a> so if you decide to book
-                        your stay using <a href="https://www.airbnb.ca/c/robertg982?currency=CAD">Airbnb</a> consider
+                            href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> so if you decide to book
+                        your stay using <a href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> consider
                         using our link here. You get $20 off your stay, we get $20. Everyone wins. Okay, sales pitch
                         over.
                     </p>
