--- a/wedding.html
+++ b/wedding.html
@@ -227,7 +227,7 @@
                         Rob and I couldn’t be bigger fans of <a
                             href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> so if you decide to book
                         your stay using <a href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> consider
-                        using our link here. You get $20 off your stay, we get $20. Everyone wins. Okay, sales pitch
+                        using our link here. You get up to $26 off your stay.Okay, sales pitch. Side note we dont work for Airbnb.
                         over.
                     </p>
                 </div>
