--- a/wedding.html
+++ b/wedding.html
@@ -143,7 +143,7 @@
                     </p>
                     <p class="paragraph secondary-color launchaco-builder-hoverable">
                      Reception:    <a href="https://www.google.com/maps/place/Deep+South+Cork/@51.8963059,-8.4772355,17z/data=!3m1!4b1!4m5!3m4!1s0x4844901a73b5c595:0xa2080b5c9c9e1bab!8m2!3d51.8963026!4d-8.4750415"
-                            target="_blank">Deep Sourth, 51 Grand Parade, Centre, Cork, Ireland</a>
+                            target="_blank">Deep South, 51 Grand Parade, Centre, Cork, Ireland</a>
                     </p>
                 </div>
                 <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
