--- a/wedding.html
+++ b/wedding.html
@@ -70,11 +70,13 @@
         <div class="container text-center mb35">
             <h3 class="heading primary-color launchaco-builder-hoverable">Our Story</h3>
             <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and
-                Courtney met while both being guests at the same co-living hub on Airbnb. <b>
-                🥞🎨<b>
+                Courtney met while both being guests at the same co-living hub on Airbnb.
                 The intrepid travelers hit it
                 off while attending an art show that also served pancakes with some of the other residents at their
-                shared Airbnb and the rest was history.</p>
+                shared Airbnb and the rest was history.
+            <b> <b>
+                🥞🎨
+            </p>
         </div>
         <div class="container-lrg flex wrap text-center">
             <div class="col-4 flex mt40 launchaco-builder-hoverable">
