--- a/wedding.html
+++ b/wedding.html
@@ -159,7 +159,7 @@
                         Time
                     </b>
                     <p class="paragraph secondary-color launchaco-builder-hoverable">
-                        2pm (ish) til late 🎉
+                        3pm til late 🎉
                     </p>
                 </div>
                 <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
